--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "com.m2049r.xmrwallet"
         minSdkVersion 21
         targetSdkVersion 30
-        versionCode 1003
-        versionName "2.0.3.1 'Puginarug'"
+        versionCode 1004
+        versionName "2.0.4.0 'Puginarug'"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         externalNativeBuild {
             cmake {
@@ -131,7 +131,7 @@ dependencies {
 
     implementation 'me.dm7.barcodescanner:zxing:1.9.8'
     implementation "com.squareup.okhttp3:okhttp:4.9.0"
-    implementation "com.burgstaller:okhttp-digest:2.1"
+    implementation "io.github.rburgst:okhttp-digest:2.5"
     implementation "com.jakewharton.timber:timber:4.7.1"
 
     implementation 'com.nulab-inc:zxcvbn:1.3.0'
